latest iteration. added mobile fixes, aligned content to center, and added a reset button to clear results.

--- a/index.css
+++ b/index.css
@@ -1,8 +1,15 @@
 body {
     width: 80%;
-    min-width: 600px;
+    max-width: 600px;
+    min-width: 300px;
     text-align: center;
-    background-color: lightgray
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 header {
@@ -20,18 +27,24 @@ div {
     height: 150px;
     background-color: rgb(157, 177, 219);
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 button{
-    width: 30%;
-    height: 70px;
-    font-size: 20px;
+    width: 40%;
+    height: 100px;
+    font-size: 30px;
     font-weight: 900;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border-radius: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+    button{
+        font-size:25px;
+    }
 }
 
 p {
@@ -39,4 +52,9 @@ p {
     font-size: 70px;
     margin-top: 20px;
     padding-top: 25px;
+}
+
+.reset {
+    background-color: rgb(228, 36, 36);
+    color: white;
 }
